fixing video and gif making, apparently when video dimensions are too large, frame rate just shrinks

--- a/css/content_script.css
+++ b/css/content_script.css
@@ -100,6 +100,7 @@
     height: 20px;
     vertical-align: middle;
     opacity: 0.8;
+    cursor: pointer;
 }
 .carlin-tab-recorder-thumbnail button:hover {
     opacity: 1.0;
